HTTP to HTTPS. Rework styling for mobile.

--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -3,12 +3,11 @@
 	max-width: 35rem;
 	padding: 0;
 	margin: auto;
+	overflow: hidden;
 }
 
 .mainimg {
 	padding: 0;
-	max-width: 35rem;
-	/*border:0.25rem solid black;*/
 }
 
 .slogan {
