Add Buzzsprout player to episode details. Highlight clickables on episode list better.

--- a/styles/episodelist.module.css
+++ b/styles/episodelist.module.css
@@ -59,6 +59,10 @@
 	text-decoration: none;
 }
 
+.episodeEntry header a:hover div{
+	background-color: rgb(200, 200, 200);
+}
+
 .episodeEntry header time {
 	display: block;
 	font-size: 1.2rem;
